<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_button">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_button">LoadApp - Curent repository by Udacity</string>
    <string name="retrofit_button">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="loading">We are downloading</string>
    <string name="file_name">File name</string>
    <string name="status">Status</string>
    <string name="ok">OK</string>
    <string name="icon_description">An icon</string>
</resources>
