<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/file_name_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@+id/status_label_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/file_name_value_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/file_name_label_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/file_name_label_text"
        tools:text="Retrofit - Type-safe HTTP client" />

    <TextView
        android:id="@+id/status_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/status"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/file_name_label_text"
        app:layout_constraintTop_toBottomOf="@+id/file_name_label_text" />

    <TextView
        android:id="@+id/status_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/status_label_text"
        app:layout_constraintStart_toStartOf="@+id/file_name_value_text"
        tools:text="SUCCESSFUL" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorAccent"
        android:visibility="invisible"
        android:text="@android:string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/ic_assistant_black_24dp"
        android:contentDescription="@string/icon_description"/>
</androidx.constraintlayout.motion.widget.MotionLayout>